src/objects/ExpenseActual__c.object
<CustomObject>
    <fields>
        <fullName>BillAmount__c</fullName>
        <label>Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillRate__c</fullName>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostedInWeekEnding__c</fullName>
        <label>Costed In Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmployeeClassification__c</fullName>
        <label>Employee Classification</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSupplierName__c</fullName>
        <label>Employee/Supplier Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSupplierNumber__c</fullName>
        <label>Employee/Supplier Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureCategory__c</fullName>
        <label>Expenditure Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureComment__c</fullName>
        <label>Expenditure Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExpenditureOrg__c</fullName>
        <label>Expenditure Org</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureType__c</fullName>
        <label>Expenditure Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenseItemDate__c</fullName>
        <label>Expense Item Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLPeriod__c</fullName>
        <label>GL Period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipName>ExpenseActuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResourceCategory__c</fullName>
        <label>Resource Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>xxExpense Actual</label>
    <nameField>
        <displayFormat>EA-{0000000000}</displayFormat>
        <label>Expense Actuals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>xxExpense Actuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>